ASUSFETest/src/objects/Financial_Aid_Package__c.object
<CustomObject>
    <description>Information received from the FAFSA and when the financial aid package is awarded. It includes fields needed for admitted student communication.</description>
    <fields>
        <fullName>Aid_Year__c</fullName>
        <inlineHelpText>This is some help text!</inlineHelpText>
        <label>Aid Year</label>
        <picklist>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2029</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Financial Aid Packages</relationshipLabel>
        <relationshipName>Financial_Aid_Packages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EFC_Range__c</fullName>
        <label>EFC Range</label>
        <picklist>
            <picklistValues>
                <fullName>Very High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FAFSA_Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fin_Aid_Package_Date__c</fullName>
        <label>Package Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pell_Eligibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pell Eligibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promise_Cohort__c</fullName>
        <label>Promise Cohort</label>
        <picklist>
            <picklistValues>
                <fullName>Advantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obama</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Financial Aid Package</label>
    <nameField>
        <label>Financial Aid Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Aid Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>